--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,6 +37,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-    - name: openup
-      run: |
-        streamlit run main.py
+#     - name: openup
+#       run: |
+#         streamlit run main.py
